[infra-sk] //infra-sk/modules/app-sk/app-sk.scss: Various fixes.
This CL includes fixes for various issues I encountered while working on codesize.skia.org's styles.

I expect this CL to generate lots of small (but acceptable) Gold diffs due to changes to make our <header>s look more uniform.

Summary of the changes:

- Import element-sk's themes.scss, which this file makes use of (see --primary, --on-primary, etc.).

- Center nodes under the <header> vertically using the CSS flex "align-items: center" property instead of a "margin: auto" property applied to all child nodes.

- Add a small gap between <header> items. The gap is consistent with the <header> left and right padding.

- Fix the <aside> styles to hide the sidebar when the screen is small via a negative "left" position, which for some reason does not work as-is.

- Increase the mobile breakpoint slightly; the current value is too small to trigger on most phones, and it does not trigger on macOS when resizing a Chrome window to the smallest possible size.

- Place the mobile breakpoint in a Sass variable so it can be easily customized by app-sk clients.

This CL also normalizes the padding in various <h1> tags across our apps, which shouldn't be necessary after the <header> style changes in this CL.

I increased the width of the screenshot taken by bugs-central-scaffold-sk_puppeteer_test.ts to be wide enough for the sidebar to show, which is necessary after the mobile breakpoint increase in this CL.

Bug: skia:12151
Reviewed-on: https://skia-review.googlesource.com/c/buildbot/+/481298
Auto-Submit: Leandro Lovisolo <lovisolo@google.com>
Commit-Queue: Joe Gregorio <jcgregorio@google.com>

--- a/autoroll/modules/arb-scaffold-sk/arb-scaffold-sk.scss
+++ b/autoroll/modules/arb-scaffold-sk/arb-scaffold-sk.scss
@@ -10,7 +10,6 @@ arb-scaffold-sk {
     h1 {
       font-weight: 400;
       font-size: 1.5em;
-      padding: 0 0.25em;
     }
 
     .spinner-spacer {
