--- a/bugs-central/modules/bugs-central-scaffold-sk/bugs-central-scaffold-sk.scss
+++ b/bugs-central/modules/bugs-central-scaffold-sk/bugs-central-scaffold-sk.scss
@@ -10,7 +10,6 @@ bugs-central-scaffold-sk {
     h1 {
       font-weight: 400;
       font-size: 24px;
-      padding: 0 4px;
     }
 
     .spinner-spacer {
