--- a/ct/modules/ct-scaffold-sk/ct-scaffold-sk.scss
+++ b/ct/modules/ct-scaffold-sk/ct-scaffold-sk.scss
@@ -11,7 +11,6 @@ ct-scaffold-sk {
     h1 {
       font-weight: 400;
       font-size: 1.5em;
-      padding: 0 0.25em;
     }
 
     .spinner-spacer {
