--- a/golden/modules/gold-scaffold-sk/gold-scaffold-sk.scss
+++ b/golden/modules/gold-scaffold-sk/gold-scaffold-sk.scss
@@ -19,7 +19,6 @@ gold-scaffold-sk {
     h1 {
       font-weight: bold;
       font-size: 1.5em;
-      padding: 0 0.25em;
     }
 
     .spinner-spacer {
