--- a/skcq/modules/skcq-scaffold-sk/skcq-scaffold-sk.scss
+++ b/skcq/modules/skcq-scaffold-sk/skcq-scaffold-sk.scss
@@ -11,7 +11,6 @@ skcq-scaffold-sk {
     h1 {
       font-weight: 400;
       font-size: 24px;
-      padding: 0 4px;
     }
 
     .spinner-spacer {
