--- a/task_scheduler/modules/task-scheduler-scaffold-sk/task-scheduler-scaffold-sk.scss
+++ b/task_scheduler/modules/task-scheduler-scaffold-sk/task-scheduler-scaffold-sk.scss
@@ -10,7 +10,6 @@ task-scheduler-scaffold-sk {
     h1 {
       font-weight: 400;
       font-size: 1.5em;
-      padding: 0 0.25em;
     }
 
     .spinner-spacer {
